Build platforms ios and add plugin cordova-plugin-facebook4

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.sudshare.ionicIssue",
+  "appId": "com.leonardo.FBDemoApp",
   "appName": "issue-ionic",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
