--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.sudshare.ionicIssue",
+  "appId": "com.leonardo.FBDemoApp",
   "appName": "issue-ionic",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
